Fixed text align in participants list

--- a/src/components/Participants/_participants.scss
+++ b/src/components/Participants/_participants.scss
@@ -76,6 +76,7 @@
     width: 95%;
     p {
       margin: 0.1em 0;
+      text-align: left;
     }
     span {
       color: $primary-color;
